fixed overlay issue by changing z-index

--- a/static/style.css
+++ b/static/style.css
@@ -50,6 +50,7 @@ div.menu{
 	width: 230px;
 	height: 230px;
 	background: rgba(255,255,255,.8);
+	z-index: 30;
 }
 
 div.slider {
@@ -60,7 +61,7 @@ div.slider {
 }
 
 div.semantic {
-	background: black;
+	background: rgba(0,0,0,.8);
 	position: fixed;
 	margin: 0px;
 	padding: 10px;
@@ -68,6 +69,7 @@ div.semantic {
 	right: 0px;
 	width: 100%;
 	height: 100%;
+	z-index: 20;
 }
 
 em{
